# sgope

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.py
backend/data/memory/knowledge_files/: example_knowledge.txt
backend/hyperhint/: main.py
backend/hyperhint/memory/: _actions.py  _knowledge_files.py
backend/hyperhint/server/: __init__.py  routes.py  sse.py  websocket.py
backend/mcp/: config.py  database.py  models.py  server.py  test_server.py
backend/sgope/: main.py  mcp_bridge.py
backend/sgope/llm/: __init__.py  _ollama.py  _openai.py
backend/sgope/memory/: __init__.py  _actions.py  _knowledge_files.py  _types.py
backend/sgope/server/: __init__.py  routes.py  sse.py  websocket.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: AppLayout.tsx  AutocompleteInput.tsx  ChatInterface.tsx  Dashboard.tsx  EnhancedInput.tsx  KnowledgeSidebar.tsx  LLMServiceConfig.tsx  MarkdownMessage.tsx  ModelSelector.tsx  task-columns.tsx
frontend/src/components/ui/: data-table.tsx  (+1 more)
frontend/src/lib/: llmStore.ts  textUtils.ts
frontend/src/types/: README.md  chat.d.ts  dashboard.d.ts  index.ts  input.d.ts  knowledge.d.ts  layout.d.ts  llm.d.ts
(+17 files in other folders)
