[project]
name = "hyperhint"
version = "0.1.0"
description = "A short description of your project."
authors = [{ name = "cyborgoat", email = "cyborgoat@outlook.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.17",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "ollama>=0.5.1",
    "openai>=1.90.0",
]

[project.optional-dependencies]
dev = ["ruff==0.12.0", "isort==6.0.1", "pyinstaller>=6.14.1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperhint*"]
exclude = ["data*"]
